src/test/deca/context/invalid/test_error_3.71-3.deca
// Description:
//    Soulève l'erreur (3.71)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Class expected behind "." (règle 3.71)
//
// Historique:
//      cree le 23/01/2022


{
    int b;
    b = 1.x();
}
